src/assets/_scss/pages/_project.scss
.project-tags {
  font-family: $font-family-secondary;
  text-transform: uppercase;
  font-size: 14px;
  letter-spacing: 1px;
  border-bottom: 1px solid $primary;
  margin-top: 30px;
  margin-bottom: 8px;
  color: $gray-400;
  p {
    margin-bottom: 8px;
  }
}

#project {
  h2 {
    margin-bottom: 0;
  }
  h3 {
    font-family: $font-family-secondary;
    font-size: 1.3rem;
    text-transform: uppercase;
    font-weight: 400;
  }
}

.parallax-parent {
  height: 500px;
  overflow: hidden;
}

.parallaxParent > * {
  position: relative;
  top: -100%;
}

.project-icons {
  div {
    width: 14.29%;
    padding: 10px;
    img {
      width: 100%;
      max-height: 50px;
    }
  }
}

//project specific styles
#burton-icons {
  img {
    width: 150px;
    max-width: 100%;
    margin: 0 auto;
    display: block;
  }
}

